# logsqueak

./: .gitignore  CLAUDE.md  FUTURE-STATE.md  PLAN.md  README.md  RESEARCH.md  demo_selection_ui.py  demo_tui.py  pyproject.toml  requirements.txt  setup-dev.sh
.github/workflows/: test.yml
.specify/memory/: constitution.md
demo/: demo.tape
demos/: README.md  demo_app.py  demo_phase1.py  demo_phase2.py  demo_phase3.py  demo_target_preview.py
docs/: prompt-inspection.md
examples/: prompt-inspection-demo.sh
scripts/: extract_roundtrip_test_cases.py
specs/: interactive-tui-design.md
specs/001-knowledge-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-logsqueak/: spec.md
specs/002-interactive-tui/: data-model.md  interactive-tui-design.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-logsqueak-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-setup-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/logseq-outline-parser/: README.md  pyproject.toml
src/logseq-outline-parser/src/logseq_outline/: __init__.py  context.py  graph.py  parser.py
src/logseq-outline-parser/tests/: test_context.py  test_graph.py  test_parser.py
src/logsqueak/: __init__.py  cli.py  config.py
test-graph/journals/: 2025-01-15.md  2025-01-16.md  2025-01-23.md  2025-01-24.md  2025_01_17.md  2025_01_20.md  2025_01_21.md  2025_01_22.md
test-graph/pages/: Agile.md  CI CD.md  Django.md  Docker.md  Domain-Driven Design.md  Emacs.md  FastAPI.md  Flask.md  Functional Programming.md  Git.md  GraphQL.md  Kubernetes.md  Logseq.md  Machine Learning.md  Microservices.md  Notion.md  Obsidian.md  PostgreSQL.md  PyTorch.md  Pytest.md  Python.md  REST API.md  Redis.md  Roam Research.md  Scikit-learn.md  TDD.md  TensorFlow.md  Vim.md  Zettelkasten.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_atomic_writes.py  test_cli.py  test_cli_index.py  test_cli_search.py  test_config_loading.py  test_edge_cases.py  test_error_recovery.py  test_extraction_workflow.py  test_full_pipeline.py  test_indexer.py  test_llm_streaming.py  test_page_index_vector_store.py  test_parsing_roundtrip.py  test_phase2_to_phase3_content.py  test_phase_transitions.py  test_rag_pipeline.py  test_rag_pipeline_mutations.py  test_rag_pipeline_readonly.py  test_roundtrip_failures.py  test_target_page_preview_integration.py  test_wizard.py  test_worker_dependencies.py  test_workflow.py
tests/ui/: __init__.py  conftest.py  test_decision_tooltips.py  test_phase1_confidence_slider.py  test_phase1_llm_streaming.py  test_phase1_navigation.py  test_phase1_selection.py  test_phase1_snapshots.py  test_phase1_status.py  test_phase2_editing.py  test_phase2_llm_accept.py  test_phase2_navigation.py  test_phase2_rag_blocking.py  test_phase2_revert.py  test_phase2_snapshots.py  test_phase3_accept.py  test_phase3_batch_accept.py  test_phase3_coverage.py  test_phase3_errors.py  test_phase3_navigation.py  test_phase3_next_block.py  test_phase3_snapshots.py  test_target_page_preview.py  (+1 more)
(+148 files in other folders)
